--- a/NetCore.Mvc/wwwroot/css/site.css
+++ b/NetCore.Mvc/wwwroot/css/site.css
@@ -1,10 +1,30 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
+.course-content {
+    padding: 24px
+}
+.course-image {
+    background-size:cover;
+    background-repeat:no-repeat;
+    background-position:center;
+}
+
+.course-image-container {
+    padding: 24px;
+    background:#fff;    
+    display:inline-block;
+    height:250px;
+    width: 250px;
+    position:relative;
+    border: 1px solid gray;
+}
+
+
 
 a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
 }
 
 /* Sticky footer styles
